tests/snapshots/apply_view_diff__failing_pager_falls_back_to_stdout.snap
---
source: tests/apply_view_diff.rs
expression: output
---
--- <root>/target/target.txt
+++ <root>/source/file.txt
@@ -1 +1 @@
-old content
+new content
deployed 0, replaced 0, skipped 1
