tests/snapshots/apply_view_diff__whitespace_dotrift_pager_falls_back_to_pager.snap
---
source: tests/apply_view_diff.rs
expression: output
---
--- <root>/target/target.txt
+++ <root>/source/file.txt
@@ -1 +1 @@
-old content
+new content
